# turboquant

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  README.md  build.rs  rustqual.toml  rustqual.toml.bak
.github/workflows/: ci.yml  release.yml
benches/: quantize_bench.rs
docs/: benchmarks.md
examples/: basic_quantize.rs  kv_cache_demo.rs
src/: attention.rs  codebook.rs  error.rs  lib.rs  math.rs  packed.rs  qjl.rs  quantize.rs  rotation.rs  test_utils.rs
src/cache/: common.rs  config.rs  mod.rs  pqo.rs  precomputed.rs  quantize_tensor.rs  storage.rs  tq.rs  wht_tensor.rs
src/cache/cuda/: attention.rs  ffi.rs  mod.rs  quantize.rs
src/cache/cuda/kernels/: tq_attention_kernel.cu  tq_common.h  tq_dequant_kernel.cu  tq_quant_kernel.cu
src/cache/precomputed/: codebooks.rs  mod.rs  rotation.rs
src/codebook/: gen.rs  mod.rs  tables.rs
src/packed/: indices.rs  mod.rs
tests/: cache_pqo_tests.rs  cache_storage_tests.rs  cache_type_correctness.rs  codebook_tests.rs  inner_product_tests.rs  mse_validation.rs  paper_verification_tests.rs  roundtrip_tests.rs
