[package]
name = "turboquant-rs"
version = "0.3.1"
edition = "2021"
authors = ["Sascha <sascha@privora.com>"]
description = "TurboQuant KV-Cache Quantization — 3-bit compression with zero accuracy loss (Zandieh et al., ICLR 2026)"
license = "MIT OR Apache-2.0"
repository = "https://github.com/SaschaOnTour/turboquant"
homepage = "https://github.com/SaschaOnTour/turboquant"
documentation = "https://docs.rs/turboquant-rs"
exclude = ["docs/*", ".github/*", ".claude/*"]
readme = "README.md"
keywords = ["quantization", "llm", "kv-cache", "inference", "compression"]
categories = ["science", "algorithms", "compression"]
rust-version = "1.75"

[lib]
name = "turboquant"

[features]
default = []
candle = ["dep:candle-core", "dep:mistralrs-kv-cache"]
cuda = ["candle", "dep:cudaforge", "candle-core/cuda"]

[dependencies]
half = "2"
thiserror = "2"
serde = { version = "1", features = ["derive"], optional = true }
candle-core = { version = ">=0.10.2", optional = true }
mistralrs-kv-cache = { version = ">=0.2.0", optional = true }

[build-dependencies]
cudaforge = { version = "0.1.2", optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
approx = "0.5"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1

[profile.bench]
opt-level = 3
lto = "thin"
codegen-units = 1

[[bench]]
name = "quantize_bench"
harness = false

[[example]]
name = "basic_quantize"

[[example]]
name = "kv_cache_demo"
